add about us comment

--- a/template/views/about.hbs
+++ b/template/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>As the core of our business we design and develop websites and applications and software development for mobile devices like iOS, Android, Blackberry and windows. Also we design and create advanced solutions for e-commerce, e-learning, ASP. NET, JAVA, Logo Designing and all the latest technologies for each and every industries.</p>
         <img class="portrait" src="/images/pk.png">
         <p>Pravin in {{country}}</p>
     </div>
